Fixed word wrap, changed block height.

--- a/public/sass/main.sass
+++ b/public/sass/main.sass
@@ -14,19 +14,21 @@ body
 
 .block
   border: $block-border
-  height: 12.5%
   margin-left: -2px
   margin-bottom: -2px
+  word-wrap: break-word
 
 .block-top
   border-bottom: $block-border
   height: 25%
-  width: 100%
+  width: auto
 
 .block-main
-  height: 75%
-  width: 100%
+  height: auto
+  width: auto
   text-align: center
+  vertical-align: middle
+  overflow: inherit
 
 .block-name
   font-size: 1.5em
@@ -64,6 +66,7 @@ body
 
 .settings-box
   background-color: $monopoly-green
+  width: 80%
   margin: 30px
   border: 4px solid #000
 
